Crash when selecting Channels of the image to draw icon - Compositor #32628

Closed
opened 2012-09-22 13:53:53 +02:00 by Vassilis Kakoy · 4 comments

%%%When select Channels of the image to draw icon from compositor after I rendered the image, blender crash.
Blender 2.64RC1 version
My specs
CPU: Intel q8200
Ram:8GB
GPU: Nvidia 260 gtx
This happens on linux (fedora 16 64bit), windows 7 64-bit and macosx Snow Leopard 10.6.8 too.

%%%

%%%When select Channels of the image to draw icon from compositor after I rendered the image, blender crash. Blender 2.64RC1 version My specs CPU: Intel q8200 Ram:8GB GPU: Nvidia 260 gtx This happens on linux (fedora 16 64bit), windows 7 64-bit and macosx Snow Leopard 10.6.8 too. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed.

Sergey: Attached "ready_to_crash.blend" for you. Open it, press F12, then ESC to go back to Compositor. Crash.
It's the channel buttons indeed in the Compositor header. %%%

%%%Confirmed. Sergey: Attached "ready_to_crash.blend" for you. Open it, press F12, then ESC to go back to Compositor. Crash. It's the channel buttons indeed in the Compositor header. %%%

%%%Fixed in svn rev50829.

Thanks for the report and for simplified file, closing now :)%%%

%%%Fixed in svn rev50829. Thanks for the report and for simplified file, closing now :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32628
No description provided.