Fix #32628: Crash when selecting Channels of the image to draw icon - Compositor

Own regressions since color management merge commit.